[tool.poetry]
name = "asyncio-course"
version = "0.1.0"
description = ""
authors = ["joonho <jh.lee@spira-t.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.5"
faker = "^26.0.0"
redis = "^5.0.7"
aiofiles = "^24.1.0"
bs4 = "^0.0.2"
lxml = "^5.2.2"
fastapi = "^0.111.0"
asyncpg = "^0.29.0"
pydantic = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
